[tool.poetry]
name = "interviewer"
version = "0.1.0"
description = "Mock interview practice application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "interviewer"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-ai = "^0.4.11"
python-multipart = "^0.0.9"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
ddgs = "^9.5.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
websockets = "^13.1"
openai = "^1.56.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"