[tool.poetry]
name = "interviewer"
version = "0.1.0"
description = "Mock interview practice application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "interviewer"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-ai = "^1.37.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
ddgs = "^9.5.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
websockets = "^13.1"
openai = "^2.11.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
duckdb = "^1.1.3"
numpy = "^1.26.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_llm: marks tests that require live LLM API calls (deselect with '-m \"not live_llm\"')"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"